--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = {text = "MIT"}
 dependencies = [
     "requests[socks]",
     "PySocks",
-    "git+https://github.com/TheEnbyperor/sslyze.git@42f62469ef2d1921016fe2144f8854d3ca6bab55",
+    "sslyze @ https://github.com/TheEnbyperor/sslyze/archive/refs/heads/release.zip",
     "stem",
 ]
 
