update stem to support ipv6

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 requests[socks]
 PySocks
 git+https://github.com/TheEnbyperor/sslyze.git@42f62469ef2d1921016fe2144f8854d3ca6bab55
-stem
+git+https://github.com/torproject/stem.git@master
+
